// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React JS with Styled Components Snapshots makeIndexImports 1`] = `
Object {
  "react-ts/index.tsx": "// DEVELOPER NOTE: These components are ready to lazy-load. You may also import components directly.

export const blah.js = () => import(\\"./blah.js\\");
",
  "react-ts/indexNotLazy.tsx": "// DEVELOPER NOTE: This file includes all components so importing this file may be very inefficient. Use carefully! You may prefer to import components directly or use index.js which has import functions, typically treated as a code splitting point.

export { default as blahJs } from \\"./blah.js\\";
",
}
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: <img src="pic.jpeg" class="frogs"> 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/imgSrc.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledImg = styled.img\`
  background: green;
\`;

const ImgSrc = ({ src, width, height, srcset, crossorigin }) => (
  <StyledImg
    src={src}
    width={width}
    height={height}
    srcSet={srcset}
    crossOrigin={crossorigin}
  />
);

export default ImgSrc;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Basic variables 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/paragraph.js": "import React from \\"react\\";

const Paragraph = ({ children }) => (
  <p>
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Some placeholder text</React.Fragment>
    )}
  </p>
);

export default Paragraph;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Boolean attribute values 1`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/row.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledDiv = styled.div\`
  color: red;
  color: blue;
\`;

const Row = ({ isReversed, children }) => (
  <StyledDiv isReversed={isReversed}>
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Columns</React.Fragment>
    )}
  </StyledDiv>
);

export default Row;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Boolean attribute values 2`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/row.js": "import React from \\"react\\";

const Row = ({ errorId, hintId, legend, hint, error, children }) => (
  <div errorId={errorId}>
    <fieldset
      aria-describedby={
        hintId !== undefined || errorId !== undefined
          ? \`\${hintId ? hintId : \\"\\"}\${errorId ? \\" \\" + errorId : \\"\\"}\`
          : undefined
      }
    >
      <legend>
        {legend !== undefined ? (
          legend
        ) : (
          <React.Fragment>Legend text</React.Fragment>
        )}
      </legend>
      {hintId !== undefined ? (
        <React.Fragment>
          <div id={hintId}>
            {hint !== undefined ? (
              hint
            ) : (
              <React.Fragment>Hint text</React.Fragment>
            )}
          </div>
        </React.Fragment>
      ) : (
        \\"\\"
      )}
      {errorId !== undefined ? (
        <React.Fragment>
          <div id={errorId}>
            <span>Error:</span>
            {error !== undefined ? (
              error
            ) : (
              <React.Fragment>Error text</React.Fragment>
            )}
          </div>
        </React.Fragment>
      ) : (
        \\"\\"
      )}
      <div>
        {children !== undefined ? (
          children
        ) : (
          <React.Fragment>Fieldset contents</React.Fragment>
        )}
      </div>
    </fieldset>
  </div>
);

export default Row;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Enum attribute values 1`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/container.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledDiv = styled.div\`
  \${props =>
    [\\"g-flex-container\\", \\"g-flex-container-fluid\\"].indexOf(
      props.containerType
    ) !== -1 &&
    styled.css\`
      background: red;
      color: purple;
    \`}
  \${props =>
    props.containerType === \\"g-flex-container-fluid\\" &&
    styled.css\`
      color: red;
    \`}
@media only screen and (min-width: 48em) {
    \${props =>
      props.containerType === \\"g-flex-container\\" &&
      styled.css\`
        color: blue;
      \`};
  }
\`;

const Container = ({ containerType, children }) => (
  <StyledDiv containerType={containerType}>
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Rows...</React.Fragment>
    )}
  </StyledDiv>
);

export default Container;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Form input[checked] 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/input.js": "import React from \\"react\\";

const Input = ({
  textId,
  disabled,
  readOnly,
  autoFocus,
  name,
  value,
  checked,
  onChange,
  ref
}) => (
  <input
    id={textId}
    type=\\"checkbox\\"
    disabled={disabled}
    readOnly={readOnly}
    autoFocus={autoFocus}
    name={name}
    value={value}
    checked={checked}
    onChange={onChange}
    ref={ref}
  />
);

export default Input;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Form label input[checked] 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/input.js": "import React from \\"react\\";

const Input = ({
  textId,
  disabled,
  readOnly,
  autoFocus,
  name,
  value,
  checked,
  onChange,
  ref
}) => (
  <label htmlFor={textId}>
    <input
      id={textId}
      type=\\"checkbox\\"
      disabled={disabled}
      readOnly={readOnly}
      autoFocus={autoFocus}
      name={name}
      value={value}
      checked={checked}
      onChange={onChange}
      ref={ref}
    />
  </label>
);

export default Input;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: H1 with configurable Id 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/h1Id.js": "import React from \\"react\\";

const H1Id = ({ id }) => <h1 id={id}>stuff</h1>;

export default H1Id;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Link with boolean class 1`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/a.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledA = styled.a\`
  color: white;
  \${props =>
    props.isMuted &&
    styled.css\`
      opacity: 0.5;
    \`}
\`;

const A = ({ isMuted, href, rel, target, onClick, children }) => (
  <StyledA
    isMuted={isMuted}
    href={href}
    rel={rel}
    target={target}
    onClick={onClick}
  >
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Example text</React.Fragment>
    )}
  </StyledA>
);

export default A;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: Lots of enum attribute values 1`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/container.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledDiv = styled.div\`
  color: red;
  \${props =>
    props.columnXs === \\"g-flex-col-xs\\" &&
    styled.css\`
      color: blue;
    \`}
\`;

const Container = ({ isReversed, columnXs, children }) => (
  <StyledDiv isReversed={isReversed} columnXs={columnXs}>
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Columns</React.Fragment>
    )}
  </StyledDiv>
);

export default Container;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components Snapshots react-js-styled-components: form input[text] 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/input.js": "import React from \\"react\\";

const Input = ({
  textId,
  disabled,
  readOnly,
  autoFocus,
  name,
  value,
  spellCheck,
  maxLength,
  autoComplete,
  onChange,
  ref
}) => (
  <React.Fragment>
    <label htmlFor={textId}>Label text</label>
    <input
      id={textId}
      type=\\"text\\"
      disabled={disabled}
      readOnly={readOnly}
      autoFocus={autoFocus}
      name={name}
      value={value}
      spellCheck={spellCheck}
      maxLength={maxLength}
      autoComplete={autoComplete}
      onChange={onChange}
      ref={ref}
    />
  </React.Fragment>
);

export default Input;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components react-js-styled-components: CSS Configuration (CSS Variables and Scss Variables) 1`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/a.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledA = styled.a\`
  color: #ffffff !important;
  \${props =>
    props.isMuted &&
    styled.css\`
      opacity: 0.5;
    \`}
\`;

const A = ({ isMuted, href, rel, target, onClick, children }) => (
  <StyledA
    isMuted={isMuted}
    href={href}
    rel={rel}
    target={target}
    onClick={onClick}
  >
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Example text</React.Fragment>
    )}
  </StyledA>
);

export default A;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components react-js-styled-components: CSS Configuration (CSS Variables and Scss Variables) 2`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/a.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledA = styled.a\`
  background: #ffffff url(\\"big.gif\\") !important;
  \${props =>
    props.isMuted &&
    styled.css\`
      opacity: 0.5;
    \`}
\`;

const A = ({ isMuted, href, rel, target, onClick, children }) => (
  <StyledA
    isMuted={isMuted}
    href={href}
    rel={rel}
    target={target}
    onClick={onClick}
  >
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Example text</React.Fragment>
    )}
  </StyledA>
);

export default A;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components react-js-styled-components: CSS Configuration of Fonts 1`] = `
Array [
  Object {
    "files": Object {
      "react-js-styled-components/a.js": "import React from \\"react\\";
import styled from \\"styled-components\\";

const StyledA = styled.a\`
  font-family: Arial, sans-serif;
\`;

const A = ({ href, rel, target, onClick, children }) => (
  <StyledA href={href} rel={rel} target={target} onClick={onClick}>
    {children !== undefined ? (
      children
    ) : (
      <React.Fragment>Example text</React.Fragment>
    )}
  </StyledA>
);

export default A;
",
    },
    "formatId": "react-js-styled-components",
  },
]
`;

exports[`React JS with Styled Components react-js-styled-components: CalculatedProps 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/textbox.js": "import React from \\"react\\";

const Textbox = ({
  disabled,
  readOnly,
  autoFocus,
  name,
  value,
  min,
  max,
  type,
  spellCheck,
  maxLength,
  autoComplete,
  onChange,
  ref
}) => (
  <input
    disabled={disabled}
    readOnly={readOnly}
    autoFocus={autoFocus}
    name={name}
    value={value}
    min={min}
    max={max}
    type={type}
    spellCheck={spellCheck}
    maxLength={maxLength}
    autoComplete={autoComplete}
    onChange={onChange}
    ref={ref}
  />
);

const Textbox__calculated = props =>
  React.createElement(Textbox, {
    ...props,
    textValueLength: (props => {
      return textValue.length;
    })(props)
  });

export { Textbox };

export default Textbox__calculated;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components react-js-styled-components: jsxToUsageCode with boolean false 1`] = `
Object {
  "react-js-styled-components": "import React from \\"react\\";
import Ul from \\"@govtnz/ds/build/react-js-styled-components/Ul\\";
import Li from \\"@govtnz/ds/build/react-js-styled-components/Li\\";

export default () => (
  <Ul isBulleted=\\"false\\">
    <Li>Unordered item one</Li>
    <Li>Unordered item two</Li>
  </Ul>
);
",
}
`;

exports[`React JS with Styled Components react-js-styled-components: jsxToUsageCode with boolean false and inline HTML 1`] = `
Object {
  "react-js-styled-components": "import React from \\"react\\";
import Ul from \\"@govtnz/ds/build/react-js-styled-components/Ul\\";
import Li from \\"@govtnz/ds/build/react-js-styled-components/Li\\";

export default () => (
  <Ul isBulleted=\\"false\\">
    <Li>
      Unordered<a href=\\"http://zombo.com/\\">item one</a>
    </Li>
    <Li>Unordered item two</Li>
  </Ul>
);
",
}
`;

exports[`React JS with Styled Components react-js-styled-components: jsxToUsageCode with boolean true 1`] = `
Object {
  "react-js-styled-components": "import React from \\"react\\";
import Ul from \\"@govtnz/ds/build/react-js-styled-components/Ul\\";
import Li from \\"@govtnz/ds/build/react-js-styled-components/Li\\";

export default () => (
  <Ul isBulleted>
    <Li>Unordered item one</Li>
    <Li>Unordered item two</Li>
  </Ul>
);
",
}
`;

exports[`React JS with Styled Components react-js-styled-components: jsxToUsageCode with enumerations 1`] = `
Object {
  "react-js-styled-components": "import React from \\"react\\";
import Div from \\"@govtnz/ds/build/react-js-styled-components/Div\\";

export default () => <Div containerType=\\"fixed\\" />;
",
}
`;

exports[`React JS with Styled Components react-js-styled-components: makeUsage 1`] = `
Object {
  "react-js-styled-components": "import React from \\"react\\";
import H1 from \\"@govtnz/ds/build/react-js-styled-components/H1\\";
import A from \\"@govtnz/ds/build/react-js-styled-components/A\\";

export default () => (
  <H1>
    <A href=\\"https://html5zombo.com/\\" reversed=\\"On\\">
      Click me
    </A>
  </H1>
);
",
}
`;

exports[`React JS with Styled Components react-js-styled-components: makeUsage with booleans 1`] = `
Object {
  "react-js-styled-components": "import React from \\"react\\";
import H1 from \\"@govtnz/ds/build/react-js-styled-components/H1\\";
import A from \\"@govtnz/ds/build/react-js-styled-components/A\\";

export default () => (
  <H1>
    <A href=\\"https://html5zombo.com/\\" isReversed>
      Click me
    </A>
  </H1>
);
",
}
`;

exports[`React JS with Styled Components react-js-styled-components: renders aria-current 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/ariacurrent.js": "import React from \\"react\\";

const Ariacurrent = ({ ariaCurrent, href, rel, target, onClick }) => (
  <a
    aria-current={ariaCurrent}
    href={href}
    rel={rel}
    target={target}
    onClick={onClick}
  >
    test
  </a>
);

export default Ariacurrent;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;

exports[`React JS with Styled Components react-js-styled-components: retains name prop 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "react-js-styled-components/textboxes.js": "import React from \\"react\\";

const Textboxes = ({
  yearId,
  disabled,
  readOnly,
  autoFocus,
  yearName,
  value,
  spellCheck,
  autoComplete,
  onChange,
  ref,
  monthId,
  monthName,
  value2,
  onChange2,
  ref2,
  dayId,
  dayName,
  value3,
  onChange3,
  ref3
}) => (
  <React.Fragment>
    <input
      id={yearId}
      maxLength={4}
      name={yearName}
      type=\\"text\\"
      disabled={disabled}
      readOnly={readOnly}
      autoFocus={autoFocus}
      value={value}
      spellCheck={spellCheck}
      autoComplete={autoComplete}
      onChange={onChange}
      ref={ref}
    />
    <input
      id={monthId}
      maxLength={2}
      name={monthName}
      type=\\"text\\"
      value={value2}
      disabled={disabled}
      readOnly={readOnly}
      autoFocus={autoFocus}
      spellCheck={spellCheck}
      autoComplete={autoComplete}
      onChange={onChange2}
      ref={ref2}
    />
    <input
      id={dayId}
      maxLength={2}
      name={dayName}
      type=\\"text\\"
      value={value3}
      disabled={disabled}
      readOnly={readOnly}
      autoFocus={autoFocus}
      spellCheck={spellCheck}
      autoComplete={autoComplete}
      onChange={onChange3}
      ref={ref3}
    />
  </React.Fragment>
);

export default Textboxes;
",
      },
      "formatId": "react-js-styled-components",
    },
  ],
}
`;
